--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">AppStudAssigment</string>
+    <string name="app_name">Nearby Bars</string>
     <string name="error_general">An error occurred</string>
     <string name="error_no_network">You are offline</string>
     <string name="label_settings">Settings</string>
+    <string name="label_map">Map</string>
+    <string name="label_list">List</string>
 </resources>
